fixed the headline and paragraph color contrast

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,22 +8,22 @@ Fonts are separated by a & */
   --primary-color: #5f0f40   ;
   --secondary-color: #fb8b24 ;
   --accent1-color: #e36414;
-  --accent2-color: #cbedf6;
+  --accent2-color: #242524;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
   --paragraph-font: Roboto, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #5f0f40;  /* headlines on a white background */ 
-  --headline-color-on-color: #e36414; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #e36414; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #cbedf6; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #e36414  ;
-  --nav-link-color: #cbedf6;
+  --headline-color-on-white: #e36414;  /* headlines on a white background */ 
+  --headline-color-on-color: #5f0f40; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #242524; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #242524; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #030e11  ;
+  --nav-link-color: #fb8b24;
   --nav-background-color: #5f0f40;
-  --nav-hover-link-color: #cbedf6;
-  --nav-hover-background-color: #e36414;
+  --nav-hover-link-color: #242524;
+  --nav-hover-background-color: #fff;
 }
 
 
